--- a/.github/workflows/Build-firmware-for-multiple routers-with-zapret-version.yml
+++ b/.github/workflows/Build-firmware-for-multiple routers-with-zapret-version.yml
@@ -47,7 +47,7 @@ jobs:
         CURRENT_ZAPRET_VERSION=$(grep -E '^SRC_VER\s*=\s*[0-9.]+' "$NFQWS_MAKEFILE" | head -1 | awk -F'=' '{print $2}' | tr -d ' ')
         
         if [[ -z "$CURRENT_ZAPRET_VERSION" ]]; then
-          echo "❌ Cannot detect current zapret version in Makefile"
+          echo "⚠ Cannot detect current zapret version in Makefile"
           echo "Please check the format in $NFQWS_MAKEFILE"
           exit 1
         fi
